samples/_failures_safe/1761650666_648e55_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e9c08cb.c: In function ‘process_token’:
./samples/SAFE/__tmp_0e9c08cb.c:168:13: error: expected declaration or statement at end of input
  168 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_0e9c08cb.c:168:13: error: expected declaration or statement at end of input
